--- a/src/stylesheets/nav.css
+++ b/src/stylesheets/nav.css
@@ -26,7 +26,7 @@ nav {
     height: fit-content;
     justify-content: space-around;
     width: 100%;
-    padding: 2% 0;
+    padding: 1.5dvh 0 2.5dvh;
 
     a {
       height: 100%;
@@ -36,13 +36,11 @@ nav {
       text-align: center;
 
       i {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
       }
 
       p {
-        margin: 0;
-        padding: 0;
-        font-size: 0.8rem;
+        display: none;
       }
     }
   }
